// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Small matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878f9a;
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.75rem;
  line-height: 0.875rem;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<li
  class="c0 c1"
>
  Test
</li>
`;

exports[`Tag Small matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.875rem;
  line-height: 1.375rem;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<li
  class="c0 c1"
>
  Test
</li>
`;
